force-app/main/default/objects/ShipmentTracking__c/ShipmentTracking__c.object-meta.xml
<CustomObject>
    <label>Shipment tracking</label>
    <nameField>
        <displayFormat>ST-{00000000}</displayFormat>
        <label>Reference Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Shipment trackings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>