force-app/main/default/objects/ShipmentTracking__c/fields/CareService__c.field-meta.xml
<CustomField>
    <fullName>CareService__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Care Service</label>
    <referenceTo>CareService__c</referenceTo>
    <relationshipLabel>Shipment trackings</relationshipLabel>
    <relationshipName>Shipment_trackings</relationshipName>
    <type>Lookup</type>
</CustomField>