force-app/main/default/objects/ShipmentTracking__c/fields/Receiver_City__c.field-meta.xml
<CustomField>
    <fullName>Receiver_City__c</fullName>
    <label>Receiver City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>