force-app/main/default/objects/ShipmentTracking__c/fields/Receiver_Country__c.field-meta.xml
<CustomField>
    <fullName>Receiver_Country__c</fullName>
    <label>Receiver Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>