force-app/main/default/objects/ShipmentTracking__c/fields/Receiver_FirstName__c.field-meta.xml
<CustomField>
    <fullName>Receiver_FirstName__c</fullName>
    <label>Receiver FirstName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>