force-app/main/default/objects/ShipmentTracking__c/fields/Receiver_Postcode__c.field-meta.xml
<CustomField>
    <fullName>Receiver_Postcode__c</fullName>
    <label>Receiver Postcode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>