force-app/main/default/objects/ShipmentTracking__c/fields/Receiver_Street__c.field-meta.xml
<CustomField>
    <fullName>Receiver_Street__c</fullName>
    <label>Receiver Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>