force-app/main/default/objects/ShipmentTracking__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Shipment created</fullName>
            </value>
            <value>
                <fullName>Shipment canceled</fullName>
            </value>
            <value>
                <fullName>List created (closed)</fullName>
            </value>
            <value>
                <fullName>EDI data received</fullName>
            </value>
            <value>
                <fullName>In Transport</fullName>
            </value>
            <value>
                <fullName>Carrier Pickup</fullName>
            </value>
            <value>
                <fullName>In Transit To Europe</fullName>
            </value>
            <value>
                <fullName>HUB Scan In</fullName>
            </value>
            <value>
                <fullName>HUB Scan Out</fullName>
            </value>
            <value>
                <fullName>Customs Clearance</fullName>
            </value>
            <value>
                <fullName>EU Customs Cleared</fullName>
            </value>
            <value>
                <fullName>EU Transport</fullName>
            </value>
            <value>
                <fullName>Arrived At EU Distribution HUB</fullName>
            </value>
            <value>
                <fullName>Forwarding</fullName>
            </value>
            <value>
                <fullName>Impairment Of Performance</fullName>
            </value>
            <value>
                <fullName>Shipment Damaged</fullName>
            </value>
            <value>
                <fullName>Shipment Lost</fullName>
            </value>
            <value>
                <fullName>Wrong Address</fullName>
            </value>
            <value>
                <fullName>Shipment Refused</fullName>
            </value>
            <value>
                <fullName>Delayed</fullName>
            </value>
            <value>
                <fullName>No Pickup</fullName>
            </value>
            <value>
                <fullName>Return To Sender</fullName>
            </value>
            <value>
                <fullName>Return Drop-Off</fullName>
            </value>
            <value>
                <fullName>Returned To Last HUB</fullName>
            </value>
            <value>
                <fullName>Returned to Sender Address</fullName>
            </value>
            <value>
                <fullName>Not Delivered</fullName>
            </value>
            <value>
                <fullName>Not Delivered Addressee Deceased</fullName>
            </value>
            <value>
                <fullName>Not Delivered Addressee Moved</fullName>
            </value>
            <value>
                <fullName>Not Delivered Shipment Refused</fullName>
            </value>
            <value>
                <fullName>Not Delivered Addressee Not Available</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>