force-app/main/default/objects/ShipmentTracking__c/fields/Status_Code__c.field-meta.xml
<CustomField>
    <fullName>Status_Code__c</fullName>
    <label>Status Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>100</fullName>
            </value>
            <value>
                <fullName>1000</fullName>
            </value>
            <value>
                <fullName>1001</fullName>
            </value>
            <value>
                <fullName>1002</fullName>
            </value>
            <value>
                <fullName>1003</fullName>
            </value>
            <value>
                <fullName>1008</fullName>
            </value>
            <value>
                <fullName>101</fullName>
            </value>
            <value>
                <fullName>1010</fullName>
            </value>
            <value>
                <fullName>102</fullName>
            </value>
            <value>
                <fullName>200</fullName>
            </value>
            <value>
                <fullName>201</fullName>
            </value>
            <value>
                <fullName>700</fullName>
            </value>
            <value>
                <fullName>701</fullName>
            </value>
            <value>
                <fullName>702</fullName>
            </value>
            <value>
                <fullName>703</fullName>
            </value>
            <value>
                <fullName>704</fullName>
            </value>
            <value>
                <fullName>705</fullName>
            </value>
            <value>
                <fullName>706</fullName>
            </value>
            <value>
                <fullName>800</fullName>
            </value>
            <value>
                <fullName>1008</fullName>
            </value>
            <value>
                <fullName>100</fullName>
            </value>
            <value>
                <fullName>102</fullName>
            </value>
            <value>
                <fullName>200</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>