force-app/main/default/objects/ShipmentTracking__c/fields/StatusDate__c.field-meta.xml
<CustomField>
    <fullName>StatusDate__c</fullName>
    <label>Status Date</label>
    <type>DateTime</type>
</CustomField>