force-app/main/default/objects/ShipmentTracking__c/fields/Tracking_link__c.field-meta.xml
<CustomField>
    <fullName>Tracking_link__c</fullName>
    <label>Tracking Link</label>
    <length>255</length>
    <type>Text</type>
</CustomField>