force-app/main/default/objects/ShipmentTracking__c/fields/Tracking_Number_Link__c.field-meta.xml
<CustomField>
    <fullName>Tracking_Number_Link__c</fullName>
    <formula>IF(ISBLANK(Tracking_link__c) ,  Tracking_Number__c , HYPERLINK(  Tracking_link__c ,  Tracking_Number__c , &apos;_blank&apos;))</formula>
    <label>Tracking Number</label>
    <type>Text</type>
</CustomField>