force-app/main/default/objects/ShipmentTracking__c/listViews/DCS_US_All_tracking_info_RC.listView-meta.xml
<ListView>
    <fullName>DCS_US_All_tracking_info_RC</fullName>
    <columns>NAME</columns>
    <columns>CareService__c</columns>
    <columns>Delivery_Type__c</columns>
    <columns>Status__c</columns>
    <columns>Status_Code__c</columns>
    <columns>StatusDate__c</columns>
    <columns>Tracking_Number__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Delivery_Type__c</field>
        <operation>equals</operation>
        <value>RC</value>
    </filters>
    <filters>
        <field>Receiver_Country__c</field>
        <operation>equals</operation>
        <value>US</value>
    </filters>
    <label>[DCS] US - All tracking info RC</label>
    <sharedTo>
        <role>Corporate</role>
        <roleAndSubordinatesInternal>AME_CSC_US_CA_Manager</roleAndSubordinatesInternal>
    </sharedTo>
</ListView>